Initial layout & home done.

--- a/src/about.html
+++ b/src/about.html
@@ -17,18 +17,6 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=New+Tegomin&family=Open+Sans" rel="stylesheet">
-
-  <script src="carousel/macro-carousel.min.js"></script>
-  <script>
-      let slider;
-      customElements.whenDefined('macro-carousel').then(() => {
-        setInterval(() => {
-          slider = slider || document.querySelector('macro-carousel');
-          slider.next();
-        }, 10000);
-      });
-  </script>
-
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
@@ -46,80 +34,17 @@
 
     <nav>
       <ul>
-        <li><a class="active" href="index.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="where-to-buy.html">Where To Buy</a></li>
-        <li><a href="about.html">About our Vegetables</a></li>
+        <li><a class="active" href="about.html">About our Vegetables</a></li>
         <li><a href="contact-us.html">Contact Us</a></li>
       </ul>
     </nav>
-    <macro-carousel loop>
-      <img src="images/carousel/plant.jpg" alt="Plant" />
-      <img src="images/carousel/farm.jpg" alt="Farm" />
-      <img src="images/carousel/garlic.jpg" alt="Garlic" />
-      <img src="images/carousel/onion.jpg" alt="Onion" />
-      <img src="images/carousel/spread1.jpg" alt="Spread" />
-      <img src="images/carousel/turnip.jpg" alt="Turnip" />
-    </macro-carousel>
   </header>
   <main role="main" tabindex="-1">
-    <section class="home-page">
+    <section class="about">
       <article>
-        <img srcset="images/the-farm-400w.jpg,
-                    images/the-farm-800w.jpg 2x"
-             src="images/the-farm-400w.jpg"
-             alt="The Farm">
-        <div class="body">
-          <h2>The Farm</h2>
-          <p>Brave Child Farm calls its home in Surrey, BC on two leased properties in the Guilford neighbourhood.   The farm was established in 2018 and focuses on Asian vegetables production. Located in the heart Surrey, just north of the Canada-US border, amongst the alluvial deposits of the Fraser River, the farm has a rich layer of loam and dark organic peat, perfect for growing vegetables.</p>
-          <p>The farm is run by Yuko Suda and Mike Millar.</p>
-        </div>
-      </article>
-
-      <article>
-        <img srcset="images/how-we-grow-400w.jpg,
-                    images/how-we-grow-800w.jpg 2x"
-             src="images/how-we-grow-400w.jpg"
-             alt="How We Grow">
-        <div class="body">
-          <h2>How We Grow</h2>
-          <p>Brave Child Farm is an ecologically run vegetable farm, in a small-scale intensive system; focusing on ecology, biology and soil health.  We believe that growing healthy food responsibility, in harmony with our natural environment, is not only possible, but also a must for the future generations.</p>
-        </div>
-      </article>
-
-      <article>
-        <img srcset="images/farmer-yuko-400w.jpg,
-                     images/farmer-yuko-800w.jpg 2x"
-             src="images/farmer-yuko-400w.jpg"
-             alt="About Our Farmer - Yuko">
-        <div class="body">
-          <h2>About Our Farmer - Yuko</h2>
-          <p>Yuko Suda is a professional civil engineer who decided to start farming during the growing season in order to do her part in fighting climate change, supporting the local ecology, and spending more time with her children. Yuko completed the Farming Practicum at the Centre for Sustainable Food Systems at the University of British Columbia in 2017. </p>
-        </div>
-      </article>
-
-      <article>
-        <img srcset="images/farmer-mike-400w.jpg,
-                     images/farmer-mike-800w.jpg 2x"
-             src="images/farmer-mike-400w.jpg"
-             alt="About Our Farmer - Mike">
-        <div class="body">
-          <h2>About Our Farmer - Mike</h2>
-          <p>Mike Millar grew up in Vancouver and became interested in learning more about the food we eat as a student in Land and Food Systems at UBC. After spending a number of seasons working at UBC Farm and developing a passion for farming, he is joining Yuko at Brave Child Farm to continue to grow healthy local produce.</p>
-        </div>
-      </article>
-
-      <article>
-        <img srcset="images/our-food-400w.jpg,
-                     images/our-food-800w.jpg 2x"
-             src="images/our-food-400w.jpg"
-             alt="Our Food">
-        <div class="body">
-          <h2>Our Food</h2>
-          <p>Yuko’s parents came to Canada from Japan in the late 1970’s, and when they arrived first in Vancouver, BC, and then in Calgary, AB, there were no Japanese vegetables or food sold in the local grocery stores.  Only a few specialty Asian markets existed, like a tiny tofu shop in downtown Calgary. Yuko’s mother tried very hard to create traditional Japanese meals, using Western ingredients. But it was never quite the same as using Japanese vegetables.  The essence of Japanese cuisine was lost.</p>
-          <p>Japanese cuisine is about interweaving simplicity to create a complex tapestry within a single meal.  The simplicity in a single dish may be in the vibrant colour of a carrot interplayed with the stark white of a daikon, or in the clear simple broth of a soup with a single mitsuba leaf floating; but that is where Japanese find beauty in the world.  One can only appreciate the complexity and frailty of the of the world by examining each element on its own, and then in the context of its surrounding. A single yuzu rind on top of white daikon pickles, sitting amongst other equality simple and tranquil dishes, within an array of plates; and only there for a fleeting moment, only a memory once the meal is over.</p>
-          <p>As Yuko became a parent and started to think about what it means to be Japanese, and try to pass that Japanese values to her children, one of her mother’s struggles of trying to raise Japanese children in Canada became apparent.  There are Japanese values that don’t translate to the English language very well; like wabi-sasbi, (meaning the beauty within the imperfections of life and peacefully accepting the natural cycle of growth and decay); but that can be conveyed through experiences, like a home cooked meal.  But without authentic Japanese ingredients, these values can be difficult to translate.  This is where the desire to build a farm, focused on traditional Asian vegetables arose.</p>
-          <p>We grow over 40 different types of vegetables, focusing on Asian vegetables that are not readily locally available.  We want to make sure Asian families have the opportunity to create their traditional family recipes without worrying about how far the vegetables travelled to get to their tables, what kinds of chemicals have been used, or if people have been exploited through its creation.  </p>
-        </div>
+        <h2>🚧 Coming Soon! 🚧</h2>
       </article>
     </section>
   </main>
