Add CSA Page for 2022.

--- a/src/csa.html
+++ b/src/csa.html
@@ -35,17 +35,26 @@
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="csa.html">CSA</a></li>
+        <li><a class="active" href="csa.html">CSA</a></li>
         <li><a href="where-to-buy.html">Where To Buy</a></li>
-        <li><a class="active" href="about.html">About our Vegetables</a></li>
+        <li><a href="about.html">About our Vegetables</a></li>
         <li><a href="contact-us.html">Contact Us</a></li>
       </ul>
     </nav>
   </header>
   <main role="main" tabindex="-1">
-    <section class="about">
+    <section class="csa-page">
       <article>
-        <h2>🚧 Coming Soon! 🚧</h2>
+        <img srcset="images/csa-400w.jpg,
+                     images/csa-800w.jpg 2x"
+             src="images/csa-400w.jpg"
+             alt="CSA">
+        <div class="body">
+            <h2>CSA Program</h2>
+            <p>We are excited to once again partner with <a href="https://huafoundation.org" target="_blank">Hua Foundation</a> to deliver a Community Supported Agriculture (CSA) program.  Our CSA program is 16 weeks and is scheduled to run from  June 22, 2022 to October 12, 2022.</p>
+            <p>This year the pickup will be at <a href="https://goo.gl/maps/qwkyKt3vcXNKfSjo6" target="_blank">Britannia Community Services Centre</a> on Wednesday from 4 pm to 6 pm.</p>
+            <p><a href="https://choibox.huafoundation.org/" target="_blank">Go to our 2022 Program Website</a> for more information and to register.</p>
+        </div>
       </article>
     </section>
   </main>
