--- a/src/where-to-buy.html
+++ b/src/where-to-buy.html
@@ -35,6 +35,7 @@
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
+        <li><a href="csa.html">CSA</a></li>
         <li><a class="active" href="where-to-buy.html">Where To Buy</a></li>
         <li><a href="about.html">About our Vegetables</a></li>
         <li><a href="contact-us.html">Contact Us</a></li>
