--- a/src/contact-us.html
+++ b/src/contact-us.html
@@ -4,12 +4,12 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link rel="canonical" href="https://bravechildfarm.ca/">
+  <link rel="canonical" href="https://bravechildfarm.ca/contact-us.html">
   <title>Brave Child Farm</title>
   <meta name="description" content="Farm located in Surrey BC">
 
   <meta property="og:site_name" content="Brave Child Farm">
-  <meta property="og:url" content="https://bravechildfarm.ca/">
+  <meta property="og:url" content="https://bravechildfarm.ca/contact-us.html">
   <meta property="og:title" content="Brave Child Farm">
   <meta property="og:type" content="website">
   <meta property="og:description" content="Farm located in Surrey BC">
