Remove html extensions from links

--- a/src/about.html
+++ b/src/about.html
@@ -4,12 +4,12 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link rel="canonical" href="https://bravechildfarm.ca/about.html">
+  <link rel="canonical" href="https://bravechildfarm.ca/about">
   <title>Brave Child Farm</title>
   <meta name="description" content="Farm located in Surrey BC">
 
   <meta property="og:site_name" content="Brave Child Farm">
-  <meta property="og:url" content="https://bravechildfarm.ca/about.html">
+  <meta property="og:url" content="https://bravechildfarm.ca/about">
   <meta property="og:title" content="Brave Child Farm">
   <meta property="og:type" content="website">
   <meta property="og:description" content="Farm located in Surrey BC">
@@ -34,11 +34,11 @@
 
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="csa.html">CSA</a></li>
-        <li><a href="where-to-buy.html">Where To Buy</a></li>
-        <li><a class="active" href="about.html">About our Vegetables</a></li>
-        <li><a href="contact-us.html">Contact Us</a></li>
+        <li><a href="/">Home</a></li>
+        <li><a href="/csa">CSA</a></li>
+        <li><a href="/where-to-buy">Where To Buy</a></li>
+        <li><a class="active" href="/about">About our Vegetables</a></li>
+        <li><a href="/contact-us">Contact Us</a></li>
       </ul>
     </nav>
   </header>
