--- a/src/index.html
+++ b/src/index.html
@@ -46,11 +46,11 @@
 
     <nav>
       <ul>
-        <li><a class="active" href="index.html">Home</a></li>
-        <li><a href="csa.html">CSA</a></li>
-        <li><a href="where-to-buy.html">Where To Buy</a></li>
-        <li><a href="about.html">About our Vegetables</a></li>
-        <li><a href="contact-us.html">Contact Us</a></li>
+        <li><a class="active" href="/">Home</a></li>
+        <li><a href="/csa">CSA</a></li>
+        <li><a href="/where-to-buy">Where To Buy</a></li>
+        <li><a href="/about">About our Vegetables</a></li>
+        <li><a href="/contact-us">Contact Us</a></li>
       </ul>
     </nav>
     <macro-carousel loop>
