--- a/src/about/garlic-scapes.html
+++ b/src/about/garlic-scapes.html
@@ -4,12 +4,12 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link rel="canonical" href="https://bravechildfarm.ca/about">
+  <link rel="canonical" href="https://bravechildfarm.ca/about/garlic-scapes">
   <title>Brave Child Farm</title>
   <meta name="description" content="Farm located in Surrey BC">
 
   <meta property="og:site_name" content="Brave Child Farm">
-  <meta property="og:url" content="https://bravechildfarm.ca/about">
+  <meta property="og:url" content="https://bravechildfarm.ca/about/garlic-scapes">
   <meta property="og:title" content="Brave Child Farm">
   <meta property="og:type" content="website">
   <meta property="og:description" content="Farm located in Surrey BC">
@@ -17,7 +17,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=New+Tegomin&family=Open+Sans" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="../style.css">
 </head>
 
 <body>
@@ -42,72 +42,39 @@
     </nav>
   </header>
   <main role="main" tabindex="-1">
-    <section class="about">
-      <article>
-        <img srcset="images/mizuna-400w.jpg,
-                    images/mizuna-800w.jpg 2x"
-             src="images/mizuna-400w.jpg"
-             alt="Mizuna">
-        <div class="body">
-          <h2><a href="about/mizuna">Mizuna</a></h2>
-          <p>Mizuna is a type of Japanese mustard green, but unlike other mustard greens it's much more mild.  Mizuna (水菜) means 'water green' in Japanese, and when you eat it, you can see why!  Its crunchy and mild; a bit reminiscent of ice berg lettuce.  It's also very versatile.  You can eat it as a salad, pan fry it with vegetables, or add it to hot pot.</p>
-        </div>
-      </article>
+    <section class="garlic-scapes">
+        <article>
+            <img srcset="../images/garlic-scapes-400w.jpg,
+                         ../images/garlic-scapes-800w.jpg 2x"
+                 src="../images/garlic-scapes-400w.jpg"
+                 alt="Garlic Scapes">
+            <div class="body">
+              <h2>Garlic Scapes</h2>
+              <p>One of the best things about growing garlic is the scapes (maybe even better than the garlic themselves)!  Garlic scapes are the tender flower stalks from hardneck garlic, and taste more mild than garlic cloves.  The best way to describe them may be 'asparagus with a garlicky flavour'.  </p>
+              <p>My favorite (as well as my children's favorite) way is to sauté them with soy sauce and maple syrup.  </p>
+            </div>
+          </article>
+    </section>
+    <section class="recipe">
 
-      <article>
-        <img srcset="images/fava-shoots-400w.jpg,
-                    images/fava-shoots-800w.jpg 2x"
-             src="images/fava-shoots-400w.jpg"
-             alt="Fava Shoots">
-        <div class="body">
-          <h2><a href="about/fava-shoots">Fava Shoots</a></h2>
-          <p>Fava shoots are the green tender tips of the fava plant (yes, the ones you can harvest fava beans from).  They have a nutty flavour and jam packed with nutrients.  One of the first vegetables you can harvest early in the spring, before other vegetables are ready.  You can cook them just like pea shoots.  </p>
-        </div>
-      </article>
+      <h2>Garlic Scape Sauté</h2>
 
-      <article>
-        <img srcset="images/salad-turnips-400w.jpg,
-                     images/salad-turnips-800w.jpg 2x"
-             src="images/salad-turnips-400w.jpg"
-             alt="Salad Turnips">
-        <div class="body">
-          <h2><a href="about/salad-turnips">Salad Turnips</a></h2>
-          <p>At Brave Child Farm, we grow Hakurei Turnips, a dependable and delicious turnip.  When you hear turnips you may be thinking those dense turnips that need to be roasted, but these ones are sweet, tender and absolutely delicious eaten raw or simply sauteed!  My daughter eats them like apples, right out of the ground (... well after its washed).</p>
-        </div>
-      </article>
+      <p>Ingredients:</p>
+      <ul>
+        <li>1 tbsp Oil (olive, canola, coconut, etc).</li>
+        <li>1 bunch garlic scapes</li>
+        <li>1 tsp soy sauce</li>
+        <li>1 tbsp maple syrup</li>
+      </ul>
 
-      <article>
-        <img srcset="images/garlic-scapes-400w.jpg,
-                     images/garlic-scapes-800w.jpg 2x"
-             src="images/garlic-scapes-400w.jpg"
-             alt="Garlic Scapes">
-        <div class="body">
-          <h2><a href="about/garlic-scapes">Garlic Scapes</a></h2>
-          <p>One of the best things about growing garlic is the scapes (maybe even better than the garlic themselves)!  Garlic scapes are the tender flower stalks from hardneck garlic, and taste more mild than garlic cloves.  The best way to describe them may be 'asparagus with a garlicky flavour'.  </p>
-        </div>
-      </article>
+      <p>Directions: </p>
+      <ol>
+        <li>Heat oil in a frying pan over high heat (the temperature depends on the type of oil).  Be careful not to overheat the oil, you don't want it smoking.</li>
+        <li>Once the oil is heated, add garlic scapes and sauté.  Cook for about 5 minutes, until the scapes are tender, and slightly blackened. </li>
+        <li>For the next step work fast so the soy sauce and maple syrup doesn't burn.  Add soy sauce to the pan and allow to bubble a bit, then add the syrup (you can use brown sugar, regular sugar, or other sweet syrups).  The syrup will bubble so work quickly to combine the syrup and soy sauce; and then toss with the scapes to get it well coated.  If necessary, turn off the heat so that the syrup doesn't burn.</li>
+        <li>Serve and enjoy!</li>
+      </ol>
 
-      <article>
-        <img srcset="images/shishito-400w.jpg,
-                     images/shishito-800w.jpg 2x"
-             src="images/shishito-400w.jpg"
-             alt="Shishito">
-        <div class="body">
-          <h2><a href="about/shishito">Shishito</a></h2>
-          <p>Shishito is a type of green pepper from Japan and is very mild.  You may occasionally get a spicy one, but the variety grown at Brave Child Farm is specifically known for being mostly mild (I have yet to encounter a spicy one with this variety).  Shishito is mild, soaks up flavours, and holds its shape well when cooked.   It is a very versatile vegetable and can be used in many ways; from tempura to stews, and sauteed to eaten raw in salads.</p>
-        </div>
-      </article>
-
-      <article>
-        <img srcset="images/japanese-leek-400w.jpg,
-                     images/japanese-leek-800w.jpg 2x"
-             src="images/japanese-leek-400w.jpg"
-             alt="Japanese Leek">
-        <div class="body">
-          <h2><a href="about/japanese-leek">Japanese Leek</a></h2>
-          <p>Japanese leeks are not leeks at all but a larger variety of the Welsh onion.  Think of them as a giant green onion.  They may have a strong onion taste when raw, but once cooked they become sweet and mild.  These types of green onions take almost a year to grow.</p>
-        </div>
-      </article>
     </section>
   </main>
   <footer>© 2022, Brave Child Farm</footer>
