--- a/src/about/japanese-leek.html
+++ b/src/about/japanese-leek.html
@@ -4,12 +4,12 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link rel="canonical" href="https://bravechildfarm.ca/about">
+  <link rel="canonical" href="https://bravechildfarm.ca/about/japanese-leek">
   <title>Brave Child Farm</title>
   <meta name="description" content="Farm located in Surrey BC">
 
   <meta property="og:site_name" content="Brave Child Farm">
-  <meta property="og:url" content="https://bravechildfarm.ca/about">
+  <meta property="og:url" content="https://bravechildfarm.ca/about/japanese-leek">
   <meta property="og:title" content="Brave Child Farm">
   <meta property="og:type" content="website">
   <meta property="og:description" content="Farm located in Surrey BC">
@@ -17,7 +17,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=New+Tegomin&family=Open+Sans" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="../style.css">
 </head>
 
 <body>
@@ -42,72 +42,71 @@
     </nav>
   </header>
   <main role="main" tabindex="-1">
-    <section class="about">
-      <article>
-        <img srcset="images/mizuna-400w.jpg,
-                    images/mizuna-800w.jpg 2x"
-             src="images/mizuna-400w.jpg"
-             alt="Mizuna">
-        <div class="body">
-          <h2><a href="about/mizuna">Mizuna</a></h2>
-          <p>Mizuna is a type of Japanese mustard green, but unlike other mustard greens it's much more mild.  Mizuna (水菜) means 'water green' in Japanese, and when you eat it, you can see why!  Its crunchy and mild; a bit reminiscent of ice berg lettuce.  It's also very versatile.  You can eat it as a salad, pan fry it with vegetables, or add it to hot pot.</p>
-        </div>
-      </article>
+    <section class="japanese-leek">
+        <article>
+            <img srcset="../images/japanese-leek-400w.jpg,
+                         ../images/japanese-leek-800w.jpg 2x"
+                 src="../images/japanese-leek-400w.jpg"
+                 alt="Japanese Leek">
+            <div class="body">
+              <h2>Japanese Leek</h2>
+              <p>Japanese leeks are not leeks at all but a larger variety of the Welsh onion.  Think of them as a giant green onion.  They may have a strong onion taste when raw, but once cooked they become sweet and mild.  These types of green onions take almost a year to grow.</p>
+            </div>
+          </article>
+    </section>
+    <section class="recipe">
 
-      <article>
-        <img srcset="images/fava-shoots-400w.jpg,
-                    images/fava-shoots-800w.jpg 2x"
-             src="images/fava-shoots-400w.jpg"
-             alt="Fava Shoots">
-        <div class="body">
-          <h2><a href="about/fava-shoots">Fava Shoots</a></h2>
-          <p>Fava shoots are the green tender tips of the fava plant (yes, the ones you can harvest fava beans from).  They have a nutty flavour and jam packed with nutrients.  One of the first vegetables you can harvest early in the spring, before other vegetables are ready.  You can cook them just like pea shoots.  </p>
-        </div>
-      </article>
+      <h2>Pan Fried Japanese Leeks</h2>
 
-      <article>
-        <img srcset="images/salad-turnips-400w.jpg,
-                     images/salad-turnips-800w.jpg 2x"
-             src="images/salad-turnips-400w.jpg"
-             alt="Salad Turnips">
-        <div class="body">
-          <h2><a href="about/salad-turnips">Salad Turnips</a></h2>
-          <p>At Brave Child Farm, we grow Hakurei Turnips, a dependable and delicious turnip.  When you hear turnips you may be thinking those dense turnips that need to be roasted, but these ones are sweet, tender and absolutely delicious eaten raw or simply sauteed!  My daughter eats them like apples, right out of the ground (... well after its washed).</p>
-        </div>
-      </article>
+      <p>Easy and quick! Once fried, the Japanese leeks become silky and sweet. Perfect with rice or just as a snack.</p>
 
-      <article>
-        <img srcset="images/garlic-scapes-400w.jpg,
-                     images/garlic-scapes-800w.jpg 2x"
-             src="images/garlic-scapes-400w.jpg"
-             alt="Garlic Scapes">
-        <div class="body">
-          <h2><a href="about/garlic-scapes">Garlic Scapes</a></h2>
-          <p>One of the best things about growing garlic is the scapes (maybe even better than the garlic themselves)!  Garlic scapes are the tender flower stalks from hardneck garlic, and taste more mild than garlic cloves.  The best way to describe them may be 'asparagus with a garlicky flavour'.  </p>
-        </div>
-      </article>
+      <p>Ingredients:</p>
+      <ul>
+        <li>1 Japanese Leek</li>
+        <li>2 tbsp Mayonnaise</li>
+        <li>1 tsp Oyster Sauce</li>
+        <li>1 tbsp Bonito Flakes</li>
+      </ul>
 
-      <article>
-        <img srcset="images/shishito-400w.jpg,
-                     images/shishito-800w.jpg 2x"
-             src="images/shishito-400w.jpg"
-             alt="Shishito">
-        <div class="body">
-          <h2><a href="about/shishito">Shishito</a></h2>
-          <p>Shishito is a type of green pepper from Japan and is very mild.  You may occasionally get a spicy one, but the variety grown at Brave Child Farm is specifically known for being mostly mild (I have yet to encounter a spicy one with this variety).  Shishito is mild, soaks up flavours, and holds its shape well when cooked.   It is a very versatile vegetable and can be used in many ways; from tempura to stews, and sauteed to eaten raw in salads.</p>
-        </div>
-      </article>
+      <p>Directions: </p>
+      <ol>
+        <li>Wash Japanese leeks and slice diagonally. Use both white and green parts.</li>
+        <li>In frying pan heat mayonnaise and add leeks.</li>
+        <li>When leeks become soft, add oyster sauce and bonito flakes.</li>
+        <li>Stir to combine sauce with leeks and take off heat.</li>
+        <li>Serve and enjoy!</li>
+      </ol>
 
-      <article>
-        <img srcset="images/japanese-leek-400w.jpg,
-                     images/japanese-leek-800w.jpg 2x"
-             src="images/japanese-leek-400w.jpg"
-             alt="Japanese Leek">
-        <div class="body">
-          <h2><a href="about/japanese-leek">Japanese Leek</a></h2>
-          <p>Japanese leeks are not leeks at all but a larger variety of the Welsh onion.  Think of them as a giant green onion.  They may have a strong onion taste when raw, but once cooked they become sweet and mild.  These types of green onions take almost a year to grow.</p>
-        </div>
-      </article>
+    </section>
+
+    <section class="recipe">
+
+      <h2>Chicken Teriyaki with Japanese Leeks</h2>
+
+      <p>Ingredients:</p>
+      <ul>
+        <li>2 Chicken Thigh, Skin On</li>
+        <li>1 Japanese Leek, White Part Only</li>
+        <li>2 tbsp Soy sauce</li>
+        <li>2 tbsp Mirin</li>
+        <li>2 tbsp Rice Wine</li>
+        <li>½ tsp Grated Ginger</li>
+        <li>1 tbsp Sugar</li>
+        <li>1 Dash of Sesame Seeds</li>
+      </ul>
+
+      <p>Directions: </p>
+      <ol>
+        <li>Cut chicken thigh and the Japanese leek into bite size pieces.</li>
+        <li>In a frying pan, fry chicken (skin side down) until golden brown.</li>
+        <li>Turn chicken over, cover pan with lid, and fry other side until golden brown and cooked through.</li>
+        <li>Add Japanese leeks and fry until golden brown.</li>
+        <li>Add soy sauce, mirin, rice wine, ginger, and sugar.</li>
+        <li>Stir until chicken and leeks are well coated with sauce.</li>
+        <li>Transfer to serving plate and top with sesame seeds.</li>
+        <li>Serve and enjoy!</li>
+      </ol>
+
     </section>
   </main>
   <footer>© 2022, Brave Child Farm</footer>
