--- a/src/contact-us.html
+++ b/src/contact-us.html
@@ -36,6 +36,7 @@
       <ul>
         <li><a href="/">Home</a></li>
         <li><a href="/csa">CSA</a></li>
+        <li><a href="/about">About our Vegetables</a></li>
         <li><a class="active" href="/contact-us">Contact Us</a></li>
       </ul>
     </nav>
