--- a/src/index.html
+++ b/src/index.html
@@ -48,6 +48,7 @@
       <ul>
         <li><a class="active" href="/">Home</a></li>
         <li><a href="/csa">CSA</a></li>
+        <li><a href="/about">About our Vegetables</a></li>
         <li><a href="/contact-us">Contact Us</a></li>
       </ul>
     </nav>
