Update Rakkyo recipe

--- a/src/about/rakkyo.html
+++ b/src/about/rakkyo.html
@@ -61,7 +61,7 @@
 
       <p>Ingredients:</p>
       <ul>
-        <li>6 Green shallots</li>
+        <li>6 Green Rakkyo</li>
         <li>1 tbsp Miso</li>
         <li>1 tsp Sake</li>
         <li>1 tsp Mirin</li>
